updated resume, cleaned up admin, playing with facebook login

--- a/php.ini
+++ b/php.ini
@@ -82,7 +82,7 @@ asp_tags = Off
 precision    =  12
 
 ; Enforce year 2000 compliance (will cause problems with non-compliant browsers)
-y2k_compliance = On
+;y2k_compliance = On
 
 ; Output buffering allows you to send header lines (including cookies) even
 ; after you send body content, at the price of slowing PHP's output layer a
@@ -151,26 +151,26 @@ serialize_precision = 100
 ; with future versions of the language (you will receive a warning each time
 ; you use this feature, and the argument will be passed by value instead of by
 ; reference).
-allow_call_time_pass_reference = On
+;allow_call_time_pass_reference = On
 
 ; Safe Mode
 ;
-safe_mode = Off
+;safe_mode = Off
 
 ; By default, Safe Mode does a UID compare check when
 ; opening files. If you want to relax this to a GID compare,
 ; then turn on safe_mode_gid.
-safe_mode_gid = Off
+;safe_mode_gid = Off
 
 ; When safe_mode is on, UID/GID checks are bypassed when
 ; including files from this directory and its subdirectories.
 ; (directory must also be in include_path or full path must
 ; be used when including)
-safe_mode_include_dir =								
+;safe_mode_include_dir =								
 
 ; When safe_mode is on, only executables located in the safe_mode_exec_dir
 ; will be allowed to be executed via the exec family of functions.
-safe_mode_exec_dir =
+;safe_mode_exec_dir =
 
 ; Setting certain environment variables may be a potential security breach.
 ; This directive contains a comma-delimited list of prefixes.  In Safe Mode,
@@ -180,12 +180,12 @@ safe_mode_exec_dir =
 ;
 ; Note:  If this directive is empty, PHP will let the user modify ANY
 ; environment variable!
-safe_mode_allowed_env_vars = PHP_
+;safe_mode_allowed_env_vars = PHP_
 
 ; This directive contains a comma-delimited list of environment variables that
 ; the end user won't be able to change using putenv().  These variables will be
 ; protected even if safe_mode_allowed_env_vars is set to allow to change them.
-safe_mode_protected_env_vars = LD_LIBRARY_PATH
+;safe_mode_protected_env_vars = LD_LIBRARY_PATH
 
 ; open_basedir, if set, limits all file operations to the defined directory
 ; and below.  This directive makes most sense if used in a per-directory
@@ -267,14 +267,14 @@ memory_limit = 128M      ; Maximum amount of memory a script may consume (128MB)
 ;
 ;   - Show all errors except for notices
 ;
-error_reporting  =  E_ALL & ~E_NOTICE
+error_reporting = E_ALL & ~E_NOTICE & ~E_DEPRECATED
 
 ; Print out errors (as a part of the output).  For production web sites,
 ; you're strongly encouraged to turn this feature off, and use error logging
 ; instead (see below).  Keeping display_errors enabled on a production web site
 ; may reveal security information to end users, such as file paths on your Web
 ; server, your database schema or other information.
-display_errors = On
+display_errors = Off
 
 ; Even when display_errors is on, errors that occur during PHP's startup
 ; sequence are not displayed.  It's strongly recommended to keep
@@ -284,7 +284,7 @@ display_startup_errors = Off
 ; Log errors into a log file (server-specific log, stderr, or error_log (below))
 ; As stated above, you're strongly advised to use error logging in place of
 ; error displaying on production web sites.
-log_errors = On
+log_errors = Off
 
 ; Set maximum length of log_errors. In error_log information about the source is
 ; added. The default is 1024 and 0 allows to not apply any maximum length at all.
@@ -362,7 +362,7 @@ variables_order = "EGPCS"
 ; You should do your best to write your scripts so that they do not require
 ; register_globals to be on;  Using form variables as globals can easily lead
 ; to possible security problems, if the code is not very well thought of.
-register_globals = Off
+;register_globals = Off
 
 ; This directive tells PHP whether to declare the argv&argc variables (that
 ; would contain the GET information).  If you don't use these variables, you
@@ -379,13 +379,13 @@ gpc_order = "GPC"
 ;
 
 ; Magic quotes for incoming GET/POST/Cookie data.
-magic_quotes_gpc = On
+;magic_quotes_gpc = Off
 
 ; Magic quotes for runtime-generated data, e.g. data from SQL, from exec(), etc.
-magic_quotes_runtime = Off    
+;magic_quotes_runtime = Off    
 
 ; Use Sybase-style magic quotes (escape ' with '' instead of \').
-magic_quotes_sybase = Off
+;magic_quotes_sybase = Off
 
 ; Automatically add files before or after any PHP document.
 auto_prepend_file =
@@ -425,11 +425,10 @@ doc_root =
 user_dir =
 
 ; Directory in which the loadable extensions (modules) reside.
-extension_dir = "/usr/local/lib/php/extensions/no-debug-non-zts-20090626"
-zend_extension="/usr/local/IonCube/ioncube_loader_lin_5.3.so"
-extension="suhosin.so"
-extension=timezonedb.so
-extension = "magickwand.so"
+extension_dir = "/usr/local/lib/php/extensions/no-debug-non-zts-20100525"
+zend_extension="/usr/local/IonCube/ioncube_loader_lin_5.4.so"
+;extension="suhosin.so"
+extension="magickwand.so"
 
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
@@ -495,8 +494,7 @@ upload_max_filesize = 64M
 ;;;;;;;;;;;;;;;;;;
 
 ; Whether to allow the treatment of URLs (like http:// or ftp://) as files.
-allow_url_fopen = On
-allow_url_include = On
+allow_url_fopen = Off
 
 ; Define the anonymous ftp password (your email address)
 ;from="john@doe.com"
@@ -594,7 +592,7 @@ default_socket_timeout = 60
 ; Whether or not to define the various syslog variables (e.g. $LOG_PID,
 ; $LOG_CRON, etc.).  Turning it off is a good idea performance-wise.  In
 ; runtime, you can define these variables by calling define_syslog_variables().
-define_syslog_variables  = Off
+;define_syslog_variables  = Off
 
 [mail function]
 ; For Win32 only.
@@ -825,7 +823,7 @@ session.save_handler = files
 ;         You can use the script in the ext/session dir for that purpose.
 ; NOTE 2: See the section on garbage collection below if you choose to
 ;         use subdirectories for session storage
-;session.save_path = /tmp
+session.save_path = /tmp
 
 ; Whether to use cookies.
 session.use_cookies = 1
@@ -879,8 +877,8 @@ session.gc_maxlifetime = 1440
 ; You can disable the feature and the warning separately. At this time,
 ; the warning is only displayed, if bug_compat_42 is enabled.
 
-session.bug_compat_42 = 1
-session.bug_compat_warn = 1
+;session.bug_compat_42 = 1
+;session.bug_compat_warn = 1
 
 ; Check HTTP Referer to invalidate externally stored URLs containing ids.
 ; HTTP_REFERER has to contain this substring for the session to be
@@ -1124,6 +1122,8 @@ pfpro.defaulttimeout = 30
 date.timezone="America/Denver"
 extension=pdo.so
 extension=pdo_sqlite.so
-extension=sqlite.so
+; sqlite was removed by EasyApache v3.22.24 on Sun Dec 15 20:52:30 2013 (PHP v5.4.x incompatibility)
+; extension=sqlite.so
+extension="timezonedb.so"
 extension=pdo_mysql.so
-zend_extension="/usr/local/Zend/lib/Guard-5.5.0/php-5.3.x/ZendGuardLoader.so"
+zend_extension="/usr/local/Zend/lib/Guard-6.0.0/php-5.4.x/ZendGuardLoader.so"
