--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ js/jquery-ui-1.10.3.custom/development-bundle/
 .sublime-workspace
 datasources.json
 js/npm-debug.log
+js/topojson-master/
+js/us-atlas/
