.gitignore: added some logging and cache paths

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ js/topojson-master/
 js/us-atlas/
 ttmsoia/
 codeblog/
+wgetLog_informed
+.sass-cache/
+informedelectorate.net/state_bills/cache/
+news/cache/
