--- a/php.ini
+++ b/php.ini
@@ -494,7 +494,7 @@ upload_max_filesize = 64M
 ;;;;;;;;;;;;;;;;;;
 
 ; Whether to allow the treatment of URLs (like http:// or ftp://) as files.
-allow_url_fopen = Off
+allow_url_fopen = On
 
 ; Define the anonymous ftp password (your email address)
 ;from="john@doe.com"
@@ -845,7 +845,7 @@ session.cookie_lifetime = 0
 session.cookie_path = /
 
 ; The domain for which the cookie is valid.
-session.cookie_domain = 
+session.cookie_domain =
 
 ; Handler used to serialize data.  php is the standard serializer of PHP.
 session.serialize_handler = php
