pushing from prod: add files to .gitignore

--- a/php.ini
+++ b/php.ini
@@ -408,7 +408,7 @@ default_mimetype = "text/html"
 ;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; UNIX: "/path1:/path2"  
-include_path = ".:/usr/lib/php:/usr/local/lib/php"
+;include_path = ".:/usr/lib/php:/usr/local/lib/php"
 ;
 ; Windows: "\path1;\path2"
 ;include_path = ".;c:\php\includes"
@@ -425,10 +425,10 @@ doc_root =
 user_dir =
 
 ; Directory in which the loadable extensions (modules) reside.
-extension_dir = "/usr/local/lib/php/extensions/no-debug-non-zts-20131226"
-zend_extension="/usr/local/IonCube/ioncube_loader_lin_5.6.so"
+;extension_dir = "/usr/local/lib/php/extensions/no-debug-non-zts-20131226"
+;zend_extension="/usr/local/IonCube/ioncube_loader_lin_5.6.so"
 ;extension="suhosin.so"
-extension="magickwand.so"
+;extension="magickwand.so"
 
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
@@ -1120,10 +1120,10 @@ pfpro.defaulttimeout = 30
 [Zend]
 
 date.timezone="America/Denver"
-extension=pdo.so
-extension=pdo_sqlite.so
+;extension=pdo.so
+;extension=pdo_sqlite.so
 ; sqlite was removed by EasyApache v3.22.24 on Sun Dec 15 20:52:30 2013 (PHP v5.4.x incompatibility)
 ; extension=sqlite.so
-extension="timezonedb.so"
-extension=pdo_mysql.so
-zend_extension="/usr/local/Zend/lib/Guard-7.0.0/php-5.6.x/ZendGuardLoader.so"
+;extension="timezonedb.so"
+;extension=pdo_mysql.so
+;zend_extension="/usr/local/Zend/lib/Guard-7.0.0/php-5.6.x/ZendGuardLoader.so"
