--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,24 @@
-*.spc
-/2.0/
-/old/
-cgi-bin/
-php.ini
 *error_log*
-js/jquery-ui-1.10.3.custom/development-bundle/
-.sublime-workspace
-datasources.json
-npm-debug.log
-js/topojson-master/
-js/us-atlas/
-ttmsoia/
-codeblog/
-wgetLog_informed
 .sass-cache/
-informedelectorate.net/state_bills/cache/
 error_log
-russ/
-news/cache/
-freezer/
-jquery-readmore/
-demos/
-composer.lock
-php.ini.bak
-.htaccess
-.htaccess.bak
 php.ini
 
-vendor
+/node_modules
+/public/css
+/public/fonts
+/public/hot
+/public/js
+/public/mix-manifest.json
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+.env
+.DS_Store
+
+composer.lock
