--- a/package.json
+++ b/package.json
@@ -11,11 +11,38 @@
     },
     "devDependencies": {
         "axios": "^0.16.2",
+        "babel-jest": "^21.2.0",
+        "babel-preset-env": "^1.6.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.23.0",
+        "babel-preset-stage-0": "^6.24.1",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.0.1",
+        "enzyme-adapter-react-15": "^1.0.1",
+        "history": "^4.7.2",
+        "jest": "^21.2.1",
         "jquery": "^3.1.1",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.1.10"
+        "react": "^15.4.2",
+        "react-bootstrap": "^0.31.3",
+        "react-dom": "^15.4.2",
+        "react-redux": "^5.0.6",
+        "react-router": "^4.2.0",
+        "react-router-bootstrap": "^0.24.4",
+        "react-router-dom": "^4.2.2",
+        "react-test-renderer": "^15.4.2",
+        "redux": "^3.7.2",
+        "redux-actions": "^2.2.1",
+        "redux-define": "^1.1.1",
+        "redux-form": "^7.0.4",
+        "redux-logger": "^3.0.6",
+        "redux-promise": "^0.5.3",
+        "redux-thunk": "^2.2.0",
+        "string-template": "^1.0.0"
+    },
+    "dependencies": {
+        "bootstrap-sass-loader": "^1.0.10",
+        "enzyme": "^3.1.0"
     }
 }
