resume looking better

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ php.ini
 /public/css
 /public/fonts
 /public/images
-/public/hot
+/public/media
 /public/js
 /public/mix-manifest.json
 /public/storage
