--- a/.env
+++ b/.env
@@ -1,8 +1,29 @@
 APP_ENV=local
-APP_DEBUG=true
-APP_KEY=base64:sz3fQVqjkHddFZXTtcb1HnmPMxX7B5TX5AQI4sUv5ZI=
+APP_KEY=base64:emWLUlYaoHAPUsFGKezeNOCgZNSdjIY8XGf3HS59Nqg=
+APP_DEBUG=false
+APP_LOG_LEVEL=debug
+APP_URL=http://localhost
 
-DB_HOST=localhost
-DB_DATABASE=wimf
+GOOGLE_ANALYTICS_KEY=
+
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+SESSION_DRIVER=file
+QUEUE_DRIVER=sync
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+
+PUSHER_APP_ID=
+PUSHER_KEY=
+PUSHER_SECRET=
