--- a/package.json
+++ b/package.json
@@ -43,8 +43,12 @@
   },
   "dependencies": {
     "bootstrap-sass-loader": "^1.0.10",
+    "closest": "0.0.1",
     "enzyme": "^3.1.0",
     "font-awesome": "^4.7.0",
+    "handlebars": "^4.0.11",
+    "handlebars-loader": "^1.6.0",
+    "simple-transition": "^1.0.0",
     "slug": "^0.9.1",
     "url-loader": "^0.6.2"
   }
