--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.6.0",
+    "react-helmet": "^5.2.0",
     "simple-transition": "^1.0.0",
     "slug": "^0.9.1",
     "url-loader": "^0.6.2"
