--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,9 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
+    # Redirect to ssl
+    RewriteCond %{SERVER_PORT} 80
+    RewriteRule ^(.*)$ https://andyhill.us/$1 [R=301,L]
+
 </IfModule>
