--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "13.5.0",
     "bootstrap": "5.1.3",
     "closest": "0.0.1",
+    "express": "4.17.3",
     "react": "^17.0.2",
     "react-bootstrap": "2.2.0",
     "react-dom": "^17.0.2",
@@ -17,7 +18,9 @@
     "web-vitals": "2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "server": "node ./server",
+    "web": "react-scripts start",
+    "start": "npm run server & npm run web",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
