--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "13.5.0",
     "bootstrap": "5.1.3",
     "closest": "0.0.1",
+    "dotenv": "16.0.0",
     "express": "4.17.3",
     "react": "^17.0.2",
     "react-bootstrap": "2.2.0",
