--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
-      "pecee/simple-router": "4.3.7.2"
+      "pecee/simple-router": "4.3.7.2",
+    "vlucas/phpdotenv": "^5.4"
   },
   "autoload": {
     "psr-4": {
