--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ yarn-error.log
 .DS_Store
 storage/data/recipes/recipes.xml
 storage/data/recipes/recipes.back.xml
+logs/
+cache/
+ah.tgz
 
 composer.lockpackage-lock.json
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
