--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
   "require": {
-      "pecee/simple-router": "4.3.7.2",
-    "vlucas/phpdotenv": "^5.4"
+    "pecee/simple-router": "4.3.7.2",
+    "vlucas/phpdotenv": "^5.4",
+    "monolog/monolog": "^2.8",
+    "phpfastcache/phpfastcache": "^9.1"
   },
   "autoload": {
     "psr-4": {
