--- a/package.json
+++ b/package.json
@@ -6,26 +6,22 @@
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "5.16.2",
-    "@testing-library/react": "12.1.3",
-    "@testing-library/user-event": "13.5.0",
     "bootstrap": "5.1.3",
     "closest": "0.0.1",
     "dotenv": "16.0.0",
-    "express": "4.17.3",
     "lodash": "4.17.21",
     "node-cache": "5.1.2",
-    "node-fetch": "3.2.1",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-bootstrap": "2.2.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "react-router-dom": "6.2.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "2.1.4",
-    "xml2js": "0.4.23",
-    "xmldom": "0.6.0",
-    "xpath": "0.0.32"
+    "react-scripts": "5.0.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "12.1.3",
+    "@testing-library/user-event": "13.5.0"
   },
   "scripts": {
     "server": "node ./server",
