--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "react-router-dom": "6.2.2",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "sass": "^1.56.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.2",
