--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
     container_name: php
     volumes:
       - .:/var/www/html:delegated
+      - /Users/andy/Dropbox/data:/data:delegated
     networks:
       - laravel
 
@@ -94,8 +95,8 @@ services:
     container_name: artisan
     volumes:
       - .:/var/www/html:delegated
-    depends_on:
-      - mysql
+    # depends_on:
+    #   - mysql
     working_dir: /var/www/html
     entrypoint: ['php', '/var/www/html/artisan']
     networks:
