Add data to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ storage/data/recipes/recipes.back.xml
 logs/
 cache/
 ah.tgz
+data
 
 composer.lockpackage-lock.json
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
